fix: harden security and performance